The navbar, and the faculty it needed: an element can describe itself
The first elements come back into the kit, and with them the machinery a trail
needs to be worth having. Nothing here was added because a list said so — each
piece is either what the navbar could not do without, or something the pass over
the branch found sitting wrong.

**What a page can now say to a machine.** An element declares a JSON-LD node as
data, in a reserved key of its descriptor; the canvas gathers what the page's
elements said, names the vocabulary once, turns it into text and prints a single
block in the head. An element never prints its own and never carries finished
markup — a descriptor holding markup is the one seam through which markup could
reach a page that was stored rather than composed, and the argument for storing
pages rests on there being no such seam. The writer that makes the text is the
kit's own, forty lines with a closed set of accepted types, because the escaping
that matters here is not JSON's: a label must not be able to end the script
element it is printed inside, and no library does that by default.

**Breadcrumbs**, visible and machine-readable out of one list of steps, so the
two halves cannot drift apart — which the rules a search engine publishes ask
for, and which is the usual thing to get wrong when they are assembled
separately. One of the sites read while specifying this has exactly that defect.
The links on the page stay as they were written, relative and all, because
absolute internal links break the day a site moves host or scheme; the addresses
a crawler reads are made absolute from an origin named once, by whoever knows
where the site lives.

**Topbar**, the bar above a page. An element rather than a thing to assemble,
and the justification is what it guarantees: assembled by hand, the way back
lands inside the trail's landmark and becomes a step of a navigation it is not
part of. Its promises are about rendered markup, so they are checked against
